Some further work on reducing the complexity of the algorithm
Signed-off-by: Daniel Frenzel <dan.frenzel87@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,14 @@ include_directories(
 set(voxel_lib
     glm_ext/glm_extensions.h
     mesh/polyhedron.h
-    mesh/polyhedron.cpp
+    mesh/polyhedron.tpp
     stl/stl_import.h
     stl/stl_import.cpp
     voxelizer.h
+    enums.h
+    rasterizer.h
+    buffer.h
+    timer.h
     rules.h
     checks.h
     checks.cpp
