Initial implementation of an octree and memory optimizations based on storing intersections only. Plan is to use the octree to replace the huge lookup-buffers in the more memory efficient rasterizer implementation.
Signed-off-by: Daniel Frenzel <dan.frenzel87@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(voxel_lib
     mesh/polyhedron.tpp
     stl/stl_import.h
     stl/stl_import.cpp
+    octree/tree.h
     voxelizer.h
     enums.h
     rasterizer.h
